Fix mathjax rendering issue on firefox

--- a/VSPOMs/static/assets/styles.css
+++ b/VSPOMs/static/assets/styles.css
@@ -272,6 +272,8 @@ section.panel .function_box .parameter_label {
 }
 section.panel .function_box .equation {
     font-size: 26px;
+    float: left;
+    transform: translateX(-20%);
 }
 section.panel .function_box input {
     width: 8vw;
